infer/tests/codetoanalyze/cpp/errors/types/operator_overload.cpp
../../frontend/types/operator_overload.cpp